--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "proyecto-grupal-web",
   "version": "0.1.0",
+  "proxy": "http://localhost:8088/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -8,7 +9,12 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "antd": "^4.6.6",
+    "axios": "^0.20.0",
+    "moment": "^2.29.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
